--- a/ethnode/webui/src/scss/custom-components/redesigned-gig-modal.scss
+++ b/ethnode/webui/src/scss/custom-components/redesigned-gig-modal.scss
@@ -4,6 +4,19 @@
         -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
         border-bottom: 1px solid #d4d4d6;
+
+        .close {
+          background: rgba(26, 26, 26, 0.5);
+          width: 35px;
+          border-radius: 50%;
+          height: 35px;
+          opacity: 0.8;
+          color: white !important;
+          text-shadow: 0 1px 0 #000;
+          &:hover {
+            opacity: 1;
+          }
+        }
     }
     div#new-modal-owner-avatar {
         margin-top: 0;
@@ -25,5 +38,11 @@
         border: 1px solid #92a8d1;
         border-radius: 3px;
         font-size: 12px;
+    }
+
+    &.no-button-order {
+      .modal-footer .btn {
+        display: none !important;
+      }
     }
 }
